restructure worfklow to be a bit more generic
